# learn-rust

./: Cargo.toml  README.md  diesel.toml
.github/workflows/: rust.yml
migrations/2025-05-25-075935_create_customers/: down.sql  up.sql
migrations/2025-05-25-124719_transactions/: down.sql  up.sql
src/: calculator_v1.rs  calculator_v2.rs  lib.rs  main.rs  models.rs  name_db.rs  schema.rs  ui.rs
src/accounting/: crud.rs  customer.rs  main.rs  mod.rs  transaction.rs
src/calculator_v3/: main.rs  mod.rs  tests.rs
src/todo/: db.rs  main.rs  mod.rs  tests.rs  todo.rs
src/utils/: io.rs  mod.rs  ui.rs
src/weather/: api.rs
src/xsdb/: cli.rs  mod.rs  query.rs  tokenizer.rs
