[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde", "clock", "std"] }
inquire = { version = "0.7.5", features = ["date"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.31"
diesel = { version = "2.2.10", features = ["postgres","numeric","chrono"] }
bigdecimal = "0.4"
